# GPT

./: .coverage  .gitignore  README.md  checkpoint.py  config.py  data.py  engine.py  generation.py  gpt_playground.ipynb  inference.py  model.py  noxfile.py  pyproject.toml  requirements.txt  train.py  train_classifier.py  weights.py
.github/workflows/: ci.yaml
src/gpt2_framework/: __init__.py  checkpoint.py  config.py  data.py  engine.py  generation.py  gpt_download.py  inference.py  model.py  train.py  train_classifier.py  weights.py
tests/: test_checkpoint.py  test_config.py  test_generation.py  test_model.py
