[project]
name = "gpt2-framework"
version = "0.1.0"
description = "A modular framework for training GPT-2 models from scratch or fine-tuning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Al-ameen007" },
]

# ── Core dependencies ──────────────────────────────────────────────
dependencies = [
    "torch>=2.0",
    "tiktoken>=0.5",
    "tqdm>=4.60",
    "requests>=2.28",
    "numpy>=1.24",
]

# ── Optional dependency groups ─────────────────────────────────────
[project.optional-dependencies]
# For loading OpenAI's pretrained GPT-2 checkpoints
pretrained = [
    "tensorflow>=2.12",
]
# For the spam classification pipeline
classify = [
    "pandas>=2.0",
]
# Everything (for development convenience)
all = [
    "gpt2-framework[pretrained,classify]",
]
# Dev/test tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "nox>=2023.4",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
]

# ── CLI entry points ──────────────────────────────────────────────
[project.scripts]
gpt2-train          = "gpt2_framework.train:main"
gpt2-train-classify = "gpt2_framework.train_classifier:main"
gpt2-infer          = "gpt2_framework.inference:main"

# ── Build system ──────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt2_framework"]

# ── Ruff (replaces flake8, isort, pyflakes, pycodestyle) ──────────
[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gpt2_framework"]

# ── Pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
